Fix flicker effect when tapping on modal
Fixes: https://github.com/ProtonMail/proton-vpn-settings/issues/243

--- a/packages/styles/_sass/pm-styles/_pm-modal.scss
+++ b/packages/styles/_sass/pm-styles/_pm-modal.scss
@@ -35,6 +35,7 @@ $modal-smaller-width: 28em !default;
   flex-direction: column;
   cursor: pointer;
   z-index: 666;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 .pm-modalContainer--inBackground {
@@ -151,7 +152,7 @@ $modal-smaller-width: 28em !default;
   }
 }
 
-.pm-modalContent{
+.pm-modalContent {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
